# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

module(name = "crt")

bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_foreign_cc", version = "0.8.0")
bazel_dep(name = "rules_pkg", version = "0.7.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(
    name = "rules_python",
    version = "0.29.0",
    dev_dependency = True,
)

# bazel_dep(
#     name = "lowrisc_bazel_release",
#     version = "0.1.0",
#     dev_dependency = True,
# )

sources = use_extension("//:extensions.bzl", "sources")
use_repo(sources, "qemu_src", "cc65_src", "mxe_src")

tools = use_extension("//:extensions.bzl", "tools")
use_repo(tools, "qemu")

# FIXME should we define some default toolchains?
crt = use_extension("@crt//:extensions.bzl", "crt")
crt.toolchains(arm = True)
use_repo(crt, "crt_toolchains")
# register_toolchains("@crt_toolchains//toolchains:all")
# register_execution_platforms("@crt_toolchains//platforms:all")

use_repo(crt, "gcc_arm_none_eabi_toolchains")
use_repo(crt, "gcc_arm_none_eabi_files")
register_toolchains("@gcc_arm_none_eabi_toolchains//:all")
# register_execution_platforms("@gcc_arm_none_eabi_toolchains//:all")